# elasticsearch-rs

./: .backportrc.json  .dockerignore  .gitattributes  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Makefile.toml  NOTICE.txt  README.md  catalog-info.yaml
.buildkite/: DockerFile  Dockerfile  pipeline.yml  run-elasticsearch.sh  run-repository.sh  run-tests
.buildkite/certs/: ca-chain.crt  ca.crt  ca.key  testnode.crt  testnode.key  testnode_no_san.crt  testnode_no_san.key
.buildkite/functions/: imports.sh
.cargo/: config.toml
.ci/: DockerFile  make.sh  run-benchmarks  run-elasticsearch.ps1  run-elasticsearch.sh  run-repository.sh  run-tests  run-tests.ps1  test-matrix.yml
.ci/benchmarks/: DockerFile
.ci/certs/: testnode_san.crt  testnode_san.key
.ci/functions/: cleanup.sh  imports.sh  wait-for-container.sh
.ci/jobs/: defaults.yml  elastic+elasticsearch-rs+7.10.yml  (+12 more)
.github/: make.sh
api_generator/: Cargo.toml
api_generator/docs/functions/: Elasticsearch.msearch.md  Indices.create.md  Indices.put_mapping.md
api_generator/docs/namespaces/: async_search.md  autoscaling.md  cat.md  ccr.md  cluster.md  connector.md  dangling_indices.md  enrich.md  eql.md  esql.md  features.md  fleet.md  graph.md  ilm.md  indices.md  inference.md  ingest.md  license.md  logstash.md  migration.md  ml.md  monitoring.md  nodes.md  query_rules.md  rollup.md  search_application.md  searchable_snapshots.md  security.md  shutdown.md  simulate.md  slm.md  snapshot.md  sql.md  ssl.md  synonyms.md  tasks.md  text_structure.md  transform.md  watcher.md  xpack.md
api_generator/rest_specs/: last_downloaded_version
api_generator/src/: api_generator.rs  error.rs  lib.rs  main.rs  rest_spec.rs
api_generator/src/api_generator/: mod.rs
api_generator/src/api_generator/code_gen/: common.rs  enums.rs  mod.rs  namespace_client.rs  namespace_clients.rs  params.rs  root.rs
api_generator/src/api_generator/code_gen/request/: mod.rs  request_builder.rs
api_generator/src/api_generator/code_gen/url/: enum_builder.rs  mod.rs  url_builder.rs
api_generator/src/generator/: mod.rs  output.rs
api_generator/src/generator/code_gen/: mod.rs  namespace_clients.rs  params.rs  root.rs  warp.rs
api_generator/src/generator/code_gen/request/: mod.rs  request_builder.rs
api_generator/src/generator/code_gen/url/: enum_builder.rs  mod.rs  url_builder.rs
api_generator/src/rest_spec/: mod.rs  parallel_downloading.rs
benchmarks/: Cargo.toml
benchmarks/src/: main.rs  record.rs  runner.rs
benchmarks/src/actions/: bulk.rs  get.rs  index.rs  info.rs  mod.rs  ping.rs
client/: Cargo.toml
docs/: docset.yml  index-custom-title-page.html  index.asciidoc  installation.asciidoc  overview.asciidoc
elasticsearch/: Cargo.toml  build.rs
elasticsearch/docs/: Elasticsearch.fn.scroll.md  Indices.fn.create.md  Indices.fn.put_mapping.md
elasticsearch/examples/: cat_indices.rs
elasticsearch/examples/index_questions_answers/: main.rs  stack_overflow.rs
elasticsearch/examples/search_questions/: main.rs  stack_overflow.rs
elasticsearch/examples/search_questions_answers/: main.rs  stack_overflow.rs
elasticsearch/src/: .generated.toml  async_search.rs  auth.rs  autoscaling.rs  cat.rs  ccr.rs  cert.rs  client.rs  cluster.rs  connection.rs  connector.rs  dangling_indices.rs  data_frame_transform_deprecated.rs  enrich.rs  enums.rs  eql.rs  error.rs  esql.rs  features.rs  fleet.rs  graph.rs  http_method.rs  ilm.rs  indices.rs  inference.rs  ingest.rs  lib.in.rs  lib.rs  license.rs  logstash.rs  migration.rs  ml.rs  monitoring.rs  nodes.rs  params.rs  profiling.rs  project.rs  query_rules.rs  request.rs  response.rs  (+19 more)
elasticsearch/src/async_search/: mod.rs
elasticsearch/src/cat/: mod.rs
elasticsearch/src/ccr/: mod.rs
elasticsearch/src/cluster/: mod.rs
elasticsearch/src/dangling_indices/: mod.rs
elasticsearch/src/enrich/: mod.rs
elasticsearch/src/graph/: mod.rs
elasticsearch/src/http/: headers.rs  mod.rs  request.rs  response.rs  transport.rs
elasticsearch/src/ilm/: mod.rs
elasticsearch/src/indices/: mod.rs
elasticsearch/src/ingest/: mod.rs
elasticsearch/src/license/: mod.rs
elasticsearch/src/migration/: mod.rs
elasticsearch/src/ml/: mod.rs
elasticsearch/src/namespace_clients/: cat.rs  ccr.rs  cluster.rs  data_frame.rs  enrich.rs  graph.rs  ilm.rs  indices.rs  ingest.rs  license.rs  migration.rs  ml.rs  mod.rs  monitoring.rs  nodes.rs  rollup.rs  security.rs  slm.rs  snapshot.rs  sql.rs  ssl.rs  tasks.rs  transform.rs  watcher.rs  xpack.rs
elasticsearch/src/nodes/: mod.rs
elasticsearch/src/params/: mod.rs
elasticsearch/src/root/: bulk.rs  mod.rs
elasticsearch/src/security/: mod.rs
elasticsearch/src/slm/: mod.rs
elasticsearch/src/snapshot/: mod.rs
elasticsearch/src/sql/: mod.rs
elasticsearch/src/ssl/: mod.rs
elasticsearch/src/tasks/: mod.rs
elasticsearch/src/transform/: mod.rs
elasticsearch/src/watcher/: mod.rs
elasticsearch/src/xpack/: mod.rs
elasticsearch/tests/: auth.rs  cert.rs  client.rs  error.rs
elasticsearch/tests/common/: client.rs  mod.rs  server.rs
elasticsearch/tests/support/: client.rs  mod.rs  server.rs
examples/: README.md
examples/cloudflare_worker/: Cargo.toml  README.md  wrangler.toml
examples/cloudflare_worker/src/: lib.rs
examples/wasm_fetch/: Cargo.toml  README.md  index.html
examples/wasm_fetch/src/: lib.rs
quickwit_elastic_api/: Cargo.toml
quickwit_elastic_api_generation/: Cargo.toml
quickwit_elastic_api_generation/src/: artifacts.rs  lib.rs
test_project/: Cargo.toml
test_project/src/: main.rs
xtask/: Cargo.toml  README.md
xtask/src/: artifacts.rs  main.rs
yaml_test_runner/: Cargo.toml  skip.yml
yaml_test_runner/src/: client.rs  generator.rs  github.rs  lib.rs  macros.rs  main.rs  regex.rs  transform.rs  util.rs
yaml_test_runner/src/step/: comparison.rs  contains.rs  do.rs  is_false.rs  is_true.rs  length.rs  match.rs  mod.rs  set.rs  skip.rs  transform_and_set.rs
yaml_test_runner/tests/: mod.rs
yaml_test_runner/tests/common/: client.rs  macros.rs  mod.rs  transform.rs  util.rs
(+71 files in other folders)
