[package]
name = "api_generator"
version = "8.4.0-alpha.1"
publish = false
description = "Generates source code for elasticsearch package, from the Elasticsearch REST API specs"
repository = "https://github.com/elastic/elasticsearch-rs"
authors = ["Elastic and Contributors"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
array_tool = "1.0.3"
bytes = "1"
dialoguer = "0.10.0"
flate2 = "~1"
globset = "~0.4"
Inflector = "0.11.4"
indicatif = "0.17.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.8"
path-slash = "0.2.1"
quote = "~0.3"
reduce = "0.1.2"
regex = "1.3.1"
reqwest = { version = "0.11", features = ["blocking"] }
semver = "1"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
serde_derive = "~1"
simple_logger = "2.3.0"
syn = { version = "~0.11", features = ["full"] }
tar = "~0.4"
toml = "0.5.6"
url = "2.1.1"
void = "1.0.2"

[dev-dependencies]
tempfile = "3.1.0"
