[package]
name = "api_generator"
version = "8.19.0-alpha.1"
publish = false
description = "Generates source code for elasticsearch package, from the Elasticsearch REST API specs"
repository = "https://github.com/elastic/elasticsearch-rs"
authors = ["Elastic and Contributors"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
array_tool = "1"
dialoguer = "0.11"
flate2 = "1"
globset = "0.4"
html-escape = "0.2"
indicatif = "0.17"
Inflector = "0.11"
itertools = "0.13"
lazy_static = "1.5"
log = "0.4"
path-slash = "0.2"
quote = "~0.3"
reduce = "0.1.4"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
simple_logger = "5"
syn = { version = "~0.11", features = ["full"] }
tar = "0.4"
toml = "0.8"
url = "2.5"
void = "1"

[dev-dependencies]
tempfile = "3.12"
