[package]
name = "quickwit_elastic_api_generation"
version = "8.7.0-alpha.1"
edition = "2018"
publish = false
license = "Apache-2.0"

[dependencies]
structopt = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.8"
chrono = { version = "0.4", features = ["serde"] }
zip = "0.6.3"
regex = "1.5.4"

api_generator = { version = "8.7.0-alpha.1", path = "../api_generator" }
