[package]
name = "xtask"
version = "8.15.0-alpha.1"
edition = "2018"
publish = false

[dependencies]
structopt = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
bytes = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.8"
chrono = { version = "0.4", features = ["serde"] }
zip = "0.5"
regex = "1.5.4"
globset = "~0.4"
tar = "~0.4"
flate2 = "~1"