[package]
name = "xtask"
version = "8.15.0-alpha.1"
edition = "2018"
publish = false

[dependencies]
structopt = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
regex = "1"
