[package]
name = "xtask"
version = "9.0.0-alpha.1"
edition = "2018"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
regex = "1"
xshell = "0.2"

[lints.clippy]
uninlined_format_args = "allow" # too pedantic
