[package]
name = "yaml_test_runner"
version = "8.4.0-alpha.1"
publish = false
edition = "2018"
authors = ["Elastic and Contributors"]
description = "Generates and runs tests from Elasticsearch's YAML test specs"
repository = "https://github.com/elastic/elasticsearch-rs"
license = "Apache-2.0"

[dependencies]
elasticsearch = { path = "./../elasticsearch", features = ["experimental-apis"]}
api_generator = { path = "./../api_generator" }

anyhow = "1.0"
base64 = "0.13"
clap = "3"
failure = "0.1.6"
itertools = "0.10.0"
Inflector = "0.11.4"
lazy_static = "1.4.0"
log = "0.4.8"
once_cell = "1.4.0"
path-slash = "0.2"
quote = "~0.3"
regex = "1.3.1"
reqwest = { version = "0.11", features = ["blocking"] }
semver = "1"
serde = "~1"
serde_yaml = "0.9"
serde_json = { version = "~1", features = ["arbitrary_precision"] }
simple_logger = "2"
syn = { version = "~0.11", features = ["full"] }
sysinfo = "0.26"
url = "2.1.1"
yaml-rust = "0.4.3"
tar = "~0.4"
flate2 = "~1"
globset = "~0.4"

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "net", "time"] }
