[package]
name = "yaml_test_runner"
version = "9.0.0-alpha.1"
publish = false
edition = "2018"
authors = ["Elastic and Contributors"]
description = "Generates and runs tests from Elasticsearch's YAML test specs"
repository = "https://github.com/elastic/elasticsearch-rs"
license = "Apache-2.0"

[dependencies]
elasticsearch = { path = "./../elasticsearch", features = ["experimental-apis"]}
api_generator = { path = "./../api_generator" }

anyhow = "1.0"
base64 = "0.22"
clap = "4"
itertools = "0.13"
Inflector = "0.11"
lazy_static = "1.5"
log = "0.4"
once_cell = "1"
path-slash = "0.2"
quote = "0.3"
regex = "1"
reqwest = "0.12"
semver = "1"
serde = "1"
serde_yaml = "0.9"
serde_json = { version = "1", features = ["arbitrary_precision"] }
simple_logger = "5"
syn = { version = "0.11", features = ["full"] }
url = "2"
yaml-rust = "0.4"
tar = "0.4"
flate2 = "1"
globset = "0.4"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "net", "time"] }

[lints.clippy]
# yaml tests contain approximate values of PI
approx_constant = "allow"
uninlined_format_args = "allow" # too pedantic
