[package]
name = "example_cloudflare_worker"
version = "0.1.0"
publish = false
authors = ["Elastic and Contributors"]
edition = "2018"

[workspace] # not part of the parent workspace

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0"
web-sys = { version = "0.3", features = ["console"] }

elasticsearch = { path = "../../elasticsearch" }
serde = "1.0"
url = "2.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
