[package]
name = "example_wasm_fetch"
version = "8.16.0-alpha.1"
publish = false
authors = ["Elastic and Contributors"]
edition = "2021"

[workspace] # not part of the parent workspace

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

elasticsearch = { path = "../../elasticsearch", default-features = false }
serde = "1"
serde_json = "1"
url = "2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
